Test that helper return values are isolated
More specifically, a helper re-runs and its return value hash't
changed, nothing should change in the DOM. Test this for:
(1) helpers in text nodes
(2) helpers in element attributes
(3) helpers in dynamic template inclusion

--- a/template_tests.html
+++ b/template_tests.html
@@ -405,3 +405,18 @@ Hi there!
 <template name="spacebars_template_test_just_content">
   {{> content}}
 </template>
+
+<template name="spacebars_template_test_simple_helpers_are_isolated">
+  {{foo}}
+</template>
+
+<template name="spacebars_template_test_attr_helpers_are_isolated">
+  <p attr={{foo}}></p>
+</template>
+
+<template name="spacebars_template_test_inclusion_helpers_are_isolated">
+  {{> foo}}
+</template>
+
+<template name="spacebars_template_test_inclusion_helpers_are_isolated_subtemplate">
+</template>
