Isolate attributes on `<p {{attrs}}>`
A helper can return an object with a set of element attributes via
`<p {{attrs}}>`. When it re-runs due to a dependency changing the
value for a given attribute might stay the same. Test that the
attribute is not set on the DOM element.

--- a/template_tests.html
+++ b/template_tests.html
@@ -414,6 +414,10 @@ Hi there!
   <p attr={{foo}}></p>
 </template>
 
+<template name="spacebars_template_test_attr_object_helpers_are_isolated">
+  <p {{attrs}}></p>
+</template>
+
 <template name="spacebars_template_test_inclusion_helpers_are_isolated">
   {{> foo}}
 </template>
