Treat null/undefined/false attributes as absent
So, in HTML, the following are equivalent, and both mean that a checkbox is checked, because the `checked` attribute is present:

- `<input type="checkbox" checked>`
- `<input type="checkbox" checked="">`

We can't mess with that.  On the other hand, in Spacebars before this commit, the following would *also* result in the checkbox being checked, regardless of whether `foo` evaluates to null, undefined, false, or the empty string:

- `<input type="checkbox" checked={{foo}}>`
- `<input type="checkbox" checked="{{foo}}">`

With this commit, the checkbox will NOT be checked if `foo` evaluates to null, undefined, or false.

To achieve this:

- In HTMLjs, an attribute is considered absent if its value is "nully" after being fully evaluated (i.e. after expanding functions and components via HTML.evaluateDynamicAttributes / HTML.evaluate).  A nully value is one consisting of null, undefined, an empty array, or an array of those things.  `false` is not nully and renders as "false".  An empty string is not nully, and will "prop open" an attribute that would otherwise collapse into absence.

- Spacebars.mustache converts null, undefined, and false to null.  So if you use {{foo}} anywhere in a template and foo evaluates to "false", that gets to converted to a null in HTMLjs (which is ignored).  (true is rendered as "true".)

- When parsing HTML, an attribute that consists of *no tokens* becomes an empty string in the HTMLjs, which props open the attribute (unlike null or an empty array).  (Since comment tokens are stripped during tokenization, if there are only comments in an attribute value that counts as no tokens.)

--- a/template_tests.html
+++ b/template_tests.html
@@ -52,6 +52,10 @@
   {{{html}}}
 </template>
 
+<template name="spacebars_template_test_triple2">
+  x{{{html}}}{{{html2}}}{{{html3}}}y
+</template>
+
 <template name="spacebars_template_test_inclusion_args">
   {{> foo bar}}
 </template>
@@ -423,4 +427,24 @@ Hi there!
 </template>
 
 <template name="spacebars_template_test_inclusion_helpers_are_isolated_subtemplate">
+</template>
+
+<template name="spacebars_template_test_nully_attributes0">
+  <input type="checkbox" checked="" stuff="">
+</template>
+
+<template name="spacebars_template_test_nully_attributes1">
+  <input type="checkbox" checked={{foo}} stuff={{foo}}>
+</template>
+
+<template name="spacebars_template_test_nully_attributes2">
+  <input type="checkbox" checked={{foo}}{{bar}} stuff={{foo}}{{bar}}>
+</template>
+
+<template name="spacebars_template_test_nully_attributes3">
+  <input type="checkbox" checked={{#if foo}}{{/if}} stuff={{#if foo}}{{/if}}>
+</template>
+
+<template name="spacebars_template_test_double">
+  {{foo}}
 </template>
