Fix bug in newargs; fix some tests

--- a/template_tests.html
+++ b/template_tests.html
@@ -12,6 +12,10 @@
   [{{this}}]
 </template>
 
+<template name="spacebars_template_test_span_this">
+  <span>{{this}}</span>
+</template>
+
 <template name="spacebars_template_test_content">
   {{> content}}
 </template>
