Fix test on IE by not depending on newline behavior

--- a/template_tests.html
+++ b/template_tests.html
@@ -455,6 +455,7 @@ Hi there!
 
 <template name="spacebars_template_test_inclusion_lookup">
   {{> spacebars_template_test_inclusion_lookup_subtmpl}}
+  THEN
   {{> dataContextSubtmpl}}
 </template>
 
