Better error for non-existent template inclusion

--- a/template_tests.html
+++ b/template_tests.html
@@ -513,3 +513,7 @@ Hi there!
     <input type="checkbox" value={{.}} checked={{isChecked}} />
   {{/each}}
 </template>
+
+<template name="spacebars_test_nonexistent_template">
+  {{> this_template_lives_in_outer_space}}
+</template>
