Fix #unless to stop helpers

--- a/template_tests.html
+++ b/template_tests.html
@@ -619,3 +619,15 @@ Hi there!
 <template name="spacebars_test_helpers_stop_with_callbacks3">
   blah
 </template>
+
+<template name="spacebars_test_helpers_stop_unless1">
+  {{#unless options}}
+    one
+  {{/unless}}
+</template>
+
+<template name="spacebars_test_helpers_stop_unless2">
+  {{#unless options}}
+    two
+  {{/unless}}
+</template>
