Pass empty object as 'this' when no data context
in template helpers and event handlers. 'this' must be an object and
it can't be null, so an empty object is the best we can do (and surely
better than 'window' which is what we had before this commit)

This was a regression from Spark.

--- a/template_tests.html
+++ b/template_tests.html
@@ -640,3 +640,8 @@ Hi there!
     two
   {{/unless}}
 </template>
+
+<template name="spacebars_test_no_data_context">
+  <button></button>
+  {{foo}}
+</template>
