Failing tests for #with behavior

--- a/template_tests.html
+++ b/template_tests.html
@@ -645,3 +645,9 @@ Hi there!
   <button></button>
   {{foo}}
 </template>
+
+<template name="spacebars_test_falsy_with">
+  {{#with obj}}
+    {{greekLetter}}
+  {{/with}}
+</template>
