--- a/template_tests.html
+++ b/template_tests.html
@@ -659,3 +659,7 @@ Hi there!
 <template name="spacebars_test_helpers_dont_leak2">
   {{foo}}{{bar}} {{#spacebars_template_test_content}}{{bonus}}{{/spacebars_template_test_content}}
 </template>
+
+<template name="spacebars_test_event_returns_false">
+  <a href="#bad-url" id="spacebars_test_event_returns_false_link">click me</a>
+</template>
