--- a/template_tests.html
+++ b/template_tests.html
@@ -663,3 +663,11 @@ Hi there!
 <template name="spacebars_test_event_returns_false">
   <a href="#bad-url" id="spacebars_test_event_returns_false_link">click me</a>
 </template>
+
+<template name="spacebars_test_tables1">
+  <table><tr><td>Foo</td></tr></table>
+</template>
+
+<template name="spacebars_test_tables2">
+  <table><tr><td>{{foo}}</td></tr></table>
+</template>
