Added test for jquery extraParameters capturing

--- a/template_tests.html
+++ b/template_tests.html
@@ -671,3 +671,8 @@ Hi there!
 <template name="spacebars_test_tables2">
   <table><tr><td>{{foo}}</td></tr></table>
 </template>
+
+<template name="spacebars_test_jquery_events">
+  <button type="button">button</button>
+</template>
+
