Add support for block comments in Spacebars

--- a/template_tests.html
+++ b/template_tests.html
@@ -676,3 +676,9 @@ Hi there!
   <button type="button">button</button>
 </template>
 
+<template name="spacebars_test_block_comment">
+  {{!-- foo --}}
+  {{!--
+    {{bar}}
+  --}}
+</template>
