Properly clean up autoruns on `UI.toHTML`.
The prior commit didn't stop components of type
`Spacebars.With` correctly.

--- a/template_tests.html
+++ b/template_tests.html
@@ -698,6 +698,10 @@ Hi there!
   {{/each}}
 </template>
 
-<template name="spacebars_test_tohtml_inclusion">
-  {{> spacebars_test_tohtml_basic}}
+<template name="spacebars_test_tohtml_include_with">
+  {{> spacebars_test_tohtml_with}}
+</template>
+
+<template name="spacebars_test_tohtml_include_each">
+  {{> spacebars_test_tohtml_each}}
 </template>
