Fix {{#with}} over a data context that is mutated
In `Spacebars.With` we embox the data context. This commit makes
that emboxing happen modulo `safeEquals`. So now if you
{{#with}} over a helper that returns an object, any time
that helper gets invalidated we re-run the computations in the block.

Fixes #2046 (though notably that example mutates the data context
from within a helper, which could lead to other types of unintended
behavior; it's probably in this particular example -- the data context
just gets added properties)

--- a/template_tests.html
+++ b/template_tests.html
@@ -712,3 +712,9 @@ Hi there!
     {{bar}}
   --}}
 </template>
+
+<template name="spacebars_test_with_mutated_data_context">
+  {{#with foo}}
+    {{value}}
+  {{/with}}
+</template>
