Make Blaze refuse to render javascript: URLs.
Call UI._allowJavascriptUrls() to enable them again. In the future, we
should have a per-element way to enable this, not a global
configuration, and maybe someday even a similar feature for other
policies (like enabling or disabling inline event handlers).

--- a/template_tests.html
+++ b/template_tests.html
@@ -718,3 +718,11 @@ Hi there!
     {{value}}
   {{/with}}
 </template>
+
+<template name="spacebars_test_url_attribute">
+  <a href="{{foo}}"></a>
+  <a hReF="{{foo}}"></a>
+  <form action="{{foo}}"></form>
+  <img src="{{foo}}" />
+  <input value="{{foo}}" />
+</template>
