--- a/template_tests.html
+++ b/template_tests.html
@@ -279,7 +279,7 @@
 </template>
 
 <template name="spacebars_template_test_block_helpers_in_attribute">
-  <div class="{{#each classes}}{{#if startsLowerCase name}}{{name}} {{/if}}{{else}}none{{/each}}">Hello</div>
+  <div class="{{#each classes}}{{#if startsLowerCase name}}{{name}} {{/if}}{{else}}none{{/each}}">Smurf</div>
 </template>
 
 <template name="spacebars_template_test_block_helpers_in_attribute_2">
