Fix IE8 "table assembly" test failure.
We no longer automatically wrap table elements in
a <tbody>.

--- a/templating_tests.html
+++ b/templating_tests.html
@@ -30,30 +30,6 @@
 
 
 
-<template name="test_table_a0">
-  <table>
-    {{> test_table_a1}}
-    {{> test_table_a1}}
-    {{> test_table_a1}}
-  </table>
-</template>
-
-<template name="test_table_a1">
-  <tr>
-    {{> test_table_a2}}
-  </tr>
-</template>
-
-<template name="test_table_a2">
-  <td>
-    {{> test_table_a3}}
-  </td>
-</template>
-
-<template name="test_table_a3">
-  Foo.
-</template>
-
 <template name="test_table_b0">
   <table>
     <tbody>
@@ -83,9 +59,11 @@
 
 <template name="test_table_each">
   <table>
-    {{#each foo}}
-      <tr><td>{{bar}}</td></tr>
-    {{/each}}
+    <tbody>
+      {{#each foo}}
+        <tr><td>{{bar}}</td></tr>
+      {{/each}}
+    </tbody>
   </table>
 </template>
 
