Expose underscored animation hooks and add a test

--- a/template_tests.html
+++ b/template_tests.html
@@ -742,3 +742,11 @@ Hi there!
     {{name}}
   {{/each}}
 </template>
+
+<template name="spacebars_test_ui_hooks">
+  <div class="test-ui-hooks">
+    {{#each items}}
+      <div>{{name}}</div>
+    {{/each}}
+  </div>
+</template>
