--- a/template_tests.html
+++ b/template_tests.html
@@ -750,3 +750,7 @@ Hi there!
     {{/each}}
   </div>
 </template>
+
+<template name="spacebars_test_template_instance_helper">
+  {{foo}}
+</template>
