Test that would have caught a recent test failure
The bug itself was fixed in e5118295d39f3183f55956026f1e5f457a0520bd

--- a/template_tests.html
+++ b/template_tests.html
@@ -736,3 +736,12 @@ Hi there!
 <template name="spacebars_test_event_handler_cleanup_sub">
   <div></div>
 </template>
+
+<template name="spacebars_test_data_context_for_event_handler_in_if">
+  {{#with foo="bar"}}
+    {{#if true}}
+      <span>Click me!</span>
+    {{/if}}
+  {{/with}}
+</template>
+
