Make sure autoruns for {{#with}} get cleaned up.
Related to #2145, #2023, #2031.

--- a/template_tests.html
+++ b/template_tests.html
@@ -754,3 +754,11 @@ Hi there!
 <template name="spacebars_test_template_instance_helper">
   {{foo}}
 </template>
+
+<template name="spacebars_test_with_cleanup">
+  <div class="test-with-cleanup">
+    {{#with foo}}
+      {{this}}
+    {{/with}}
+  </div>
+</template>
