Adds UI._parentData(n) method in template helpers.
This method returns the parent data context which surrounds the
helper call. This mirrors the effect of {{..}} in Spacebars. So
UI._parentData(2) is equivalent to {{../..}}.

--- a/template_tests.html
+++ b/template_tests.html
@@ -790,3 +790,21 @@ Hi there!
     {{/with}}
   </div>
 </template>
+
+<template name="spacebars_test_template_parent_data_helper">
+  {{#with "parent"}}
+    {{> spacebars_test_template_parent_data_helper_child}}
+  {{/with}}
+</template>
+
+<template name="spacebars_test_template_parent_data_helper_child">
+  {{#each a}}
+    {{#with b}}
+      {{#if c}}
+        {{#with "d"}}
+          {{foo}}
+        {{/with}}
+      {{/if}}
+    {{/with}}
+  {{/each}}
+</template>
