Fix UI._templateInstance() to look at surrounding template.
Previously we were using the current component to retrieve the template
instance, but what we actually want is the template instance of the
surrounding component that is a template.

--- a/template_tests.html
+++ b/template_tests.html
@@ -780,7 +780,7 @@ Hi there!
 </template>
 
 <template name="spacebars_test_template_instance_helper">
-  {{foo}}
+  {{#with true}}{{foo}}{{/with}}
 </template>
 
 <template name="spacebars_test_with_cleanup">
