Make <a> tags SVG elements when they have `xlink:href`.
Fixes #2178.

--- a/template_tests.html
+++ b/template_tests.html
@@ -822,3 +822,9 @@ Hi there!
     {{/with}}
   {{/each}}
 </template>
+
+<template name="spacebars_test_svg_anchor">
+  <svg>
+    <a xlink:href="http://www.example.com">Foo</a>
+  </svg>
+</template>
