Test destroyed callback better
We weren’t actually testing that templates removed by control flow (like #each) get their destroyed callback called.

This test should make it to devel regardless of the fate of this branch.

--- a/template_tests.html
+++ b/template_tests.html
@@ -823,3 +823,13 @@ Hi there!
     {{/with}}
   {{/each}}
 </template>
+
+<template name="spacebars_test_template_created_rendered_destroyed_each">
+  {{#each items}}
+    <div>{{> spacebars_test_template_created_rendered_destroyed_each_sub _id}}</div>
+  {{/each}}
+</template>
+
+<template name="spacebars_test_template_created_rendered_destroyed_each_sub">
+  {{.}}
+</template>
