Port UI.render, UI.renderWithData, UI.insert
UI.render and UI.renderWithData now return a DOMRange.
We've never quite documented what the return value of
these functions is, other than "you can pass it to
UI.insert", which is still true.

Also ported the tests by moving them into the spacebars-tests
package, so that they use a template rather than the
component/htmljs API. This has the added benefit of
making the tests less brittle to changes in internals.

--- a/template_tests.html
+++ b/template_tests.html
@@ -823,3 +823,7 @@ Hi there!
     {{/with}}
   {{/each}}
 </template>
+
+<template name="spacebars_test_ui_render">
+  <span>{{greeting}} {{r}}</span>
+</template>
