Port UI.getElementData

--- a/template_tests.html
+++ b/template_tests.html
@@ -827,3 +827,7 @@ Hi there!
 <template name="spacebars_test_ui_render">
   <span>{{greeting}} {{r}}</span>
 </template>
+
+<template name="spacebars_test_ui_getElementData">
+  <span></span>
+</template>
