--- a/template_tests.html
+++ b/template_tests.html
@@ -833,3 +833,7 @@ Hi there!
 <template name="spacebars_test_template_created_rendered_destroyed_each_sub">
   {{.}}
 </template>
+
+<template name="spacebars_test_ui_getElementData">
+  <span></span>
+</template>
