Handle textarea edge case slightly more gracefully
and tests

--- a/template_tests.html
+++ b/template_tests.html
@@ -244,6 +244,10 @@
   <textarea>{{#if foo}}</not a tag>{{else}}<also not a tag>{{/if}}</textarea>
 </template>
 
+<template name="spacebars_template_test_textarea3">
+  <textarea id="myTextarea">{{foo}}</textarea>
+</template>
+
 <template name="spacebars_template_test_textarea_each">
   <textarea>{{#each foo}}<not a tag {{.}} {{else}}<>{{/each}}</textarea>
 </template>
