Fix Blaze.currentView in event handlers
with test

--- a/template_tests.html
+++ b/template_tests.html
@@ -922,3 +922,7 @@ Hi there!
 <template name="spacebars_test_isolated_lookup3">
   {{> bar}}--{{> spacebars_test_isolated_lookup_inclusion}}
 </template>
+
+<template name="spacebars_test_current_view_in_event">
+  <span>{{.}}</span>
+</template>
