Fix #2339 (dynamic attributes on textareas)

--- a/template_tests.html
+++ b/template_tests.html
@@ -926,3 +926,15 @@ Hi there!
 <template name="spacebars_test_current_view_in_event">
   <span>{{.}}</span>
 </template>
+
+<template name="spacebars_test_textarea_attrs">
+  <textarea {{attrs}}></textarea>
+</template>
+
+<template name="spacebars_test_textarea_attrs_contents">
+  <textarea {{attrs}}>Hello {{name}}</textarea>
+</template>
+
+<template name="spacebars_test_textarea_attrs_array_contents">
+  <textarea {{attrs}} class="bar">Hello {{name}}</textarea>
+</template>
